--- a/second.yml
+++ b/second.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: install list
       yum:
-        name: {{item}}
+        name: '{{ item }}'
         state: present
       with_items:
         - httpd
