--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory = ./inventory
 host_key_checking = False
-remote_user = ec2-user
+#remote_user = ec2-user
 interpreter_python = auto_silent
