--- a/first.yml
+++ b/first.yml
@@ -1,10 +1,11 @@
 ---
 - name: install and start httpd
-  hosts: web
+  hosts: worker
+  become: yes
   gather_facts: no
   tasks:
     - name: install httpd
-      yum:
+      apt:
         name: httpd
         state: installed
         update_cache: true
