--- a/inventory.yaml
+++ b/inventory.yaml
@@ -8,5 +8,5 @@ all:
       hosts:
         localhost:
   vars:
-    ansible_become=yes
+    #ansible_become=yes
     #ansible_ssh_private_key_file = ./aws.pem
